--- a/ServerTcp/pom.xml
+++ b/ServerTcp/pom.xml
@@ -5,8 +5,20 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>38</groupId>
-    <artifactId>NettverkOblig1</artifactId>
+    <artifactId>ServerTcp</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
@@ -16,5 +28,4 @@
         </dependency>
     </dependencies>
 
-
-</project>  
+</project>
